// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkPill renders a NetworkPill with border 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#2098531a",
        "borderColor": "#209853",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "lineHeight": 24,
        },
        {
          "color": "#209853",
          "paddingTop": 1,
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;

exports[`NetworkPill renders a NetworkPill without image 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#2098531a",
        "borderColor": "transparent",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "lineHeight": 24,
        },
        {
          "color": "#209853",
          "paddingTop": 1,
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;

exports[`NetworkPill renders an InlineNetworkPill 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#2098531a",
        "borderColor": "transparent",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.2}
    style={
      [
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Medium",
          "fontSize": 13,
          "lineHeight": 16,
        },
        {
          "color": "#209853",
          "paddingTop": 1,
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;
